--- a/Technical Documentation Page/technical-doc.html
+++ b/Technical Documentation Page/technical-doc.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./technical-doc.css" />
     <title>FCC:Techincal Documentation Page</title>
   </head>
   <body>
+
+    <nav id="navbar">
+      <header>JS Documentation</header>
+      <ul>
+        <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+        <li><a class="nav-link" href="#What_you_should_already_know">What you should already know</a></li>
+        <li><a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a></li>
+        <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
+        <li><a class="nav-link" href="#Variables">Variables</a></li>
+        <li><a class="nav-link" href="#Declaring_variables">Declaring variables</a></li>
+        <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
+        <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
+        <li><a class="nav-link" href="#Constants">Constants</a></li>
+        <li><a class="nav-link" href="#Data_types">Data types</a></li>
+        <li><a class="nav-link" href="#if...else_statement">if...else statement</a></li>
+        <li><a class="nav-link" href="#while_statement">while statement</a></li>
+        <li><a class="nav-link" href="#Function_declarations">Function declarations</a></li>
+        <li><a class="nav-link" href="#Reference">Reference</a></li>
+      </ul>  
+    </nav>
+
     <main id="main-doc">
-      <section class="main-section">
-        <h1>Introduction</h1>
+      <section class="main-section" id="Introduction">
+        <header>Introduction</header>
         <p>
           JavaScript is a cross-platform, object-oriented scripting language. It
           is a small and lightweight language. Inside a host environment (for
@@ -21,44 +43,45 @@
           control structures, and statements. Core JavaScript can be extended
           for a variety of purposes by supplementing it with additional objects;
           for example:
+          <ul>
+            <li>
+              Client-side JavaScript extends the core language by supplying
+              objects to control a browser and its Document Object Model (DOM).
+              For example, client-side extensions allow an application to place
+              elements on an HTML form and respond to user events such as mouse
+              clicks, form input, and page navigation.
+            </li>
+            <li>
+              Server-side JavaScript extends the core language by supplying
+              objects relevant to running JavaScript on a server. For example,
+              server-side extensions allow an application to communicate with a
+              database, provide continuity of information from one invocation to
+              another of the application, or perform file manipulations on a
+              server.
+            </li>
+          </ul>
         </p>
-        <ul>
-          <li>
-            Client-side JavaScript extends the core language by supplying
-            objects to control a browser and its Document Object Model (DOM).
-            For example, client-side extensions allow an application to place
-            elements on an HTML form and respond to user events such as mouse
-            clicks, form input, and page navigation.
-          </li>
-          <li>
-            Server-side JavaScript extends the core language by supplying
-            objects relevant to running JavaScript on a server. For example,
-            server-side extensions allow an application to communicate with a
-            database, provide continuity of information from one invocation to
-            another of the application, or perform file manipulations on a
-            server.
-          </li>
-        </ul>
       </section>
 
-      <section class="main-section">
-        <h1>What you should already know</h1>
-        <p>This guide assumes you have the following basic background:</p>
-        <ul>
-          <li>
-            A general understanding of the Internet and the World Wide Web
-            (WWW).
-          </li>
-          <li>Good working knowledge of HyperText Markup Language (HTML).</li>
-          <li>
-            Some programming experience. If you are new to programming, try one
-            of the tutorials linked on the main page about JavaScript.
-          </li>
-        </ul>
+      <section class="main-section" id="What_you_should_already_know">
+        <header>What you should already know</header>
+        <p>This guide assumes you have the following basic background:
+          <ul>
+            <li>
+              A general understanding of the Internet and the World Wide Web
+              (WWW).
+            </li>
+            <li>Good working knowledge of HyperText Markup Language (HTML).</li>
+            <li>
+              Some programming experience. If you are new to programming, try one
+              of the tutorials linked on the main page about JavaScript.
+            </li>
+          </ul>
+        </p>          
       </section>
 
-      <section class="main-section">
-        <h1>JavaScript and Java</h1>
+      <section class="main-section" id="JavaScript_and_Java">
+        <header>JavaScript and Java</header>
         <p>
           JavaScript and Java are similar in some ways but fundamentally
           different in some others. The JavaScript language resembles Java but
@@ -87,8 +110,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Hello world</h1>
+      <section class="main-section" id="Hello_world">
+        <header>Hello world</header>
         <p>
           To get started with writing JavaScript, open the Scratchpad and write
           your first "Hello world" JavaScript code:
@@ -105,8 +128,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Variables</h1>
+      <section class="main-section" id="Variables">
+        <header>Variables</header>
         <p>
           You use variables as symbolic names for values in your application.
           The names of variables, called identifiers, conform to certain rules.
@@ -126,10 +149,10 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Declaring variables</h1>
+      <section class="main-section" id="Declaring_variables">
+        <header>Declaring variables</header>
         <p>You can declare a variable in three ways:</p>
-        <p>With the keyword <code>var</code>. For example,</p>
+        <p>With the keyword <strong>var</strong>. For example,</p>
         <p>
           <code>var x = 42.</code>
         </p>
@@ -152,8 +175,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Variable scope</h1>
+      <section class="main-section" id="Variable_scope">
+        <header>Variable scope</header>
         <p>
           When you declare a variable outside of any function, it is called a
           global variable, because it is available to any other code in the
@@ -182,8 +205,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Global variables</h1>
+      <section class="main-section" id="Global_variables">
+        <header>Global variables</header>
         <p>
           Global variables are in fact properties of the global object. In web
           pages the global object is window, so you can set and access global
@@ -198,8 +221,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Constants</h1>
+      <section class="main-section" id="Constants">
+        <header>Constants</header>
         <p>
           You can create a read-only, named constant with the const keyword. The
           syntax of a constant identifier is the same as for a variable
@@ -238,30 +261,31 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Data types</h1>
-        <p>The latest ECMAScript standard defines seven data types:</p>
-        <ul>
-          <li>
-            <p>Six data types that are primitives:</p>
-            <ul>
-              <li>Boolean. true and false.</li>
-              <li>
-                null. A special keyword denoting a null value. Because
-                JavaScript is case-sensitive, null is not the same as Null,
-                NULL, or any other variant.
-              </li>
-              <li>undefined. A top-level property whose value is undefined.</li>
-              <li>Number. 42 or 3.14159.</li>
-              <li>String. "Howdy"</li>
-              <li>
-                Symbol (new in ECMAScript 2015). A data type whose instances are
-                unique and immutable.
-              </li>
-            </ul>
-          </li>
-          <li>and Object</li>
-        </ul>
+      <section class="main-section" id="Data_types">
+        <header>Data types</header>
+        <p>The latest ECMAScript standard defines seven data types:
+          <ul>
+            <li>
+              <p>Six data types that are primitives:</p>
+              <ul>
+                <li>Boolean. true and false.</li>
+                <li>
+                  null. A special keyword denoting a null value. Because
+                  JavaScript is case-sensitive, null is not the same as Null,
+                  NULL, or any other variant.
+                </li>
+                <li>undefined. A top-level property whose value is undefined.</li>
+                <li>Number. 42 or 3.14159.</li>
+                <li>String. "Howdy"</li>
+                <li>
+                  Symbol (new in ECMAScript 2015). A data type whose instances are
+                  unique and immutable.
+                </li>
+              </ul>
+            </li>
+            <li>and Object</li>
+          </ul>
+        </p>          
         <p>
           Although these data types are a relatively small amount, they enable
           you to perform useful functions with your applications. Objects and
@@ -271,8 +295,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>if...else statement</h1>
+      <section class="main-section" id="if...else_statement">
+        <header>if...else statement</header>
         <p>
           Use the if statement to execute a statement if a logical condition is
           true. Use the optional else clause to execute a statement if the
@@ -332,8 +356,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>while statement</h1>
+      <section class="main-section" id="while_statement">
+        <header>while statement</header>
         <p>
           A while statement executes its statements as long as a specified
           condition evaluates to true. A while statement looks as follows:
@@ -363,35 +387,35 @@
         <p>
           With each iteration, the loop increments n and adds that value to x.
           Therefore, x and n take on the following values:
+          <ul>
+            <li>After the first pass: n = 1 and x = 1</li>
+            <li>After the second pass: n = 2 and x = 3</li>
+            <li>After the third pass: n = 3 and x = 6</li>
+          </ul>
         </p>
-        <ul>
-          <li>After the first pass: n = 1 and x = 1</li>
-          <li>After the second pass: n = 2 and x = 3</li>
-          <li>After the third pass: n = 3 and x = 6</li>
-        </ul>
         <p>
           After completing the third pass, the condition n < 3 is no longer
           true, so the loop terminates.
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Function declarations</h1>
+      <section class="main-section" id="Function_declarations">
+        <header>Function declarations</header>
         <p>
           A function definition (also called a function declaration, or function
           statement) consists of the function keyword, followed by:
+          <ul>
+            <li>The name of the function.</li>
+            <li>
+              A list of arguments to the function, enclosed in parentheses and
+              separated by commas.
+            </li>
+            <li>
+              The JavaScript statements that define the function, enclosed in
+              curly brackets, { }.
+            </li>
+          </ul>
         </p>
-        <ul>
-          <li>The name of the function.</li>
-          <li>
-            A list of arguments to the function, enclosed in parentheses and
-            separated by commas.
-          </li>
-          <li>
-            The JavaScript statements that define the function, enclosed in
-            curly brackets, { }.
-          </li>
-        </ul>
         <p>
           For example, the following code defines a simple function named
           square:
@@ -414,8 +438,8 @@
         </p>
       </section>
 
-      <section class="main-section">
-        <h1>Reference</h1>
+      <section class="main-section" id="Reference">
+        <header>Reference</header>
         <p>
           All the documentation in this page is taken from
           <a
@@ -426,7 +450,5 @@
         </p>
       </section>
     </main>
-
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
